css/style.css
/* ... */
@media (max-width: 767px) {
  .products__item {
    height: 162px;
  }
}
@media (min-width: 768px) {
  .products__item {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    flex: 1;
    width: 324px;
    height: 509px;
    margin-inline: 10px;
  }
}
@media (min-width: 1439px) {
  .products__item {
    flex: 0;
    justify-content: flex-end;
    width: 245px;
    min-width: 245px;
    height: 431px;
    min-height: 515px;
  }
}

.products__item--view-all {
  height: 180px;
}
@media (max-width: 767px) {
  .products__item--view-all {
    margin-bottom: 29px;
  }
}
@media (min-width: 768px) {
  .products__item--view-all {
    margin-top: 120px;
    height: 429px;
  }
}

.product__icon {
  padding-top: 25px;
}
@media (max-width: 767px) {
  .product__icon {
    padding-top: 0;
    flex: 1 0 auto;
  }
}
@media (min-width: 768px) {
  .product__icon {
    margin-top: 30px;
    margin-bottom: 20px;
  }
}
@media (min-width: 1439px) {
  .product__icon {
    margin-top: 0;
  }
}

@media (min-width: 768px) {
  .product__icon--gift {
    width: 60px;
    height: 60px;
    border: 2px;
  }
}

.product__img {
  grid-column: 1/2;
  grid-row: 1/3;
  margin: auto;
}
@media (max-width: 767px) {
  .product__img {
    width: 78px;
    height: 86px;
    -o-object-fit: contain;
       object-fit: contain;
  }
}
@media (min-width: 768px) {
  .product__img {
    flex: 1 0;
    margin-top: 45px;
    -o-object-fit: contain;
       object-fit: contain;
  }
}

@media (max-width: 767px) {
  .products__img--1kg {
    width: 80px;
    height: 98px;
  }
}

.product__description {
  grid-column: 2/4;
  grid-row: 1/3;
  width: 100%;
}
@media (min-width: 1439px) {
  .product__description {
    margin-bottom: 10px;
  }
}

.product__title {
  text-transform: uppercase;
  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
}
@media (max-width: 767px) {
  .product__title {
    margin-bottom: 14px;
    margin-top: -4px;
  }
}
@media (min-width: 768px) {
  .product__title {
    max-width: 150px;
    margin: 25px auto;
    font-size: 20px;
    line-height: 24px;
    text-transform: uppercase;
    text-align: center;
  }
}
@media (min-width: 1439px) {
  .product__title {
    margin-bottom: 21.5px;
    font-size: 20px;
    line-height: 21px;
  }
}

@media (min-width: 768px) {
  .product__title br {
    display: none;
  }
}
.product__feature {
  font-family: "Arial", sans-serif;
  font-size: 12px;
  line-height: 16px;
  margin-bottom: 33px;
}
@media (min-width: 768px) {
  .product__feature {
    padding-inline: 35px;
    font-size: 16px;
    line-height: 16px;
  }
}

.product__feature-title,
.product__feature-text {
  display: inline-block;
}

.product__feature-text {
  margin: 0;
}

.footer-top__map-leaflet {
  width: 100%;
  height: 362px;
  background-color: #f2f2f2;
}

.footer {
  margin: 0 -20px;
}
@media (min-width: 1439px) {
  .footer {
    margin-top: -115px;
  }
}

.footer-top__wrapper {
  position: relative;
  min-width: 320px;
}

.footer-top__contacts {
  display: flex;
  justify-content: space-between;
  gap: 5px;
  min-width: 320px;
  padding-top: 12px;
  padding-inline: 19px;
  padding-bottom: 15px;
}
@media (min-width: 768px) {
  .footer-top__contacts {
    padding-top: 31px;
    padding-inline: 72px;
    margin-bottom: 28px;
  }
}
@media (min-width: 1439px) {
  .footer-top__contacts {
    position: absolute;
    top: 95px;
    width: 570px;
    height: 201px;
    margin-left: 110px;
    padding: 66px 69.5px 51px 78px;
    background-color: #ffffff;
  }
}

.footer-top__contacts--grey {
  margin-left: -20px;
  padding: 26px 20px;
  min-width: 320px;
  background-color: #f2f2f2;
}

.footer-top__contacts-slogan {
  min-width: 140px;
  text-transform: uppercase;
  font-size: 16px;
  line-height: 18px;
  font-weight: 400;
}
@media (min-width: 768px) {
  .footer-top__contacts-slogan {
    font-size: 20px;
    line-height: 23px;
    text-transform: uppercase;
  }
}
@media (min-width: 1439px) {
  .footer-top__contacts-slogan {
    flex: 1 1 auto;
    margin: 0;
    padding-top: 3px;
  }
}

.footer-top__contacts-address {
  font-family: "Arial", sans-serif;
  font-size: 14px;
  line-height: 20px;
}
@media (min-width: 768px) {
  .footer-top__contacts-address {
    max-width: 159px;
    text-align: end;
    font-size: 16px;
    line-height: 20px;
  }
}
@media (min-width: 1439px) {
  .footer-top__contacts-address {
    max-width: 200px;
    flex: 1 1 auto;
    margin: 0;
    padding-left: 25px;
    text-align: left;
  }
}

@media (min-width: 768px) {
  .footer-top__contacts-address span {
    display: inline-block;
    margin-top: 20px;
  }
}

@media (min-width: 768px) {
  .footer-top__map iframe {
    height: 400px;
  }
}
.footer-bottom {
  min-width: 320px;
  padding-top: 40px;
  background-color: #f2f2f2;
}
@media (min-width: 768px) {
  .footer-bottom {
    height: 150px;
    padding: 0 30px;
  }
}
@media (min-width: 1439px) {
  .footer-bottom {
    padding-inline: 110px;
  }
}

.footer-bottom__wrapper {
  text-align: center;
}
@media (min-width: 768px) {
  .footer-bottom__wrapper {
    display: flex;
    height: 100%;
    justify-content: space-between;
    align-items: center;
    align-content: flex-start;
    text-align: left;
  }
}

.footer-bottom__item {
  width: 100%;
  border-bottom: 1px solid #d9d9d9;
}
.footer-bottom__item:last-child {
  border-bottom: none;
}
@media (min-width: 768px) {
  .footer-bottom__item {
    border-bottom: none;
  }
}

.social__list {
  display: flex;
  flex-wrap: wrap;
  gap: 35px;
  justify-content: center;
  align-items: center;
  list-style: none;
  padding: 0;
}
@media (min-width: 768px) {
  .social__list {
    gap: 21px;
  }
}

.social__item {
  width: 23px;
  height: 23px;
}

.social__link svg,
.copyright__link svg,
.copyright__link-name {
  color: #222222;
}

.social__link:hover svg,
.copyright__link:hover svg {
  color: #68b738;
}

.social__link:active svg,
.copyright__link:active svg,
.copyright__link-name:active {
  opacity: 0.3;
}
/* ... */

